# pandas-ai

./: pyproject.toml
pandasai/: __init__.py  constants.py  exceptions.py
pandasai/llm/: openai.py
pandasai/prompts/: correct_wrong_type_prompt.py  generate_python_code.py
tests/: conftest.py  test_only_df.py
tests/test_data/csv/: kpi_for_demo.csv  metrics_for_demo.csv  portco_for_demo.csv
